--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.1.4",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.0"
   }
 }
